--- a/style.css
+++ b/style.css
@@ -1,5 +1,196 @@
+:root {
+    --accent-color: #34CEEB;
+    --text-color-darkmode: #FFFFFF;
+    --background-color-darkmode: #060D0D;
+    --text-color-lightmode: #060D0D;
+    --background-color-lightmode: #FFFFFF;
+}
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    background-color: var(--background-color-darkmode);
+    color: var(--text-color-darkmode);
+}
+
+.toAccentuate {
+    color: var(--accent-color);
+}
+
+
+
+
+
+
+
+
+
+
+/* Header */
+
+header {
+    position: sticky;
+    top: 0;
+    left: 0;
+    background-color: var(--background-color-darkmode);
+    height: 90px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+header nav ul{
+    display: flex;
+    flex-direction: row;
+}
+
+header nav ul li {
+    list-style: none;
+    margin-left: 20px;
+}
+
+header nav ul li a {
+    text-decoration: none;
+    color: var(--text-color-darkmode);
+    font-size: 1.3rem;
+}
+
+header nav ul li a:hover {
+    color: var(--accent-color);
+}
+
+header nav ul li .active {
+    color: var(--accent-color);
+}
+
+header button {
+    background-color: transparent;
+    border: 1px solid var(--accent-color);
+    padding: 10px 40px;
+    border-radius: 5px;
+    cursor: pointer;
+    color: var(--text-color-darkmode);
+}
+
+header button:hover {
+    background-color: var(--accent-color);
+    color: var(--text-color-lightmode);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* main */ 
+
+/* main section 1 */
+
+main section:nth-child(1) {
+    height: calc(100vh - 90px);
+    width: 100%;
+    background-color: violet;
+    background-image: url(img/bg_section_one.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+main section:nth-child(1) div:nth-child(1) {
+    width: 30%;
+    display: flex;
+    flex-direction: row;
+}
+main section:nth-child(1) div:nth-child(1) h2 {
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+main section:nth-child(1) div:nth-child(1) h2:nth-child(1) {
+    position: relative;
+    top: -50px;
+}
+
+main section:nth-child(1) div:nth-child(1) hr{
+    width: 100px;
+    height: 5px;
+    background-color: var(--accent-color);
+    border: none;
+    rotate: 140deg;
+}
+
+main section:nth-child(1) div:nth-child(2) {
+    display: flex;
+    flex-direction: row;
+    width: 30%;
+    justify-content: space-between;
+}
+
+main section:nth-child(1) button:nth-child(1) {
+    background-color: var(--accent-color);
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: var(--text-color-darkmode);
+    font-size: 1.3rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+main section:nth-child(1) button:nth-child(1):hover {
+    background-color: transparent;
+    border: 1px solid var(--accent-color);
+    color: var(--text-color-darkmode);
+    cursor: pointer;
+}
+
+main section:nth-child(1) button:nth-child(2) {
+    background-color: transparent;
+    border: 1px solid var(--accent-color);
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: var(--text-color-darkmode);
+    font-size: 1.3rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+main section:nth-child(1) button:nth-child(2):hover {
+    background-color: var(--accent-color);
+    border: none;
+    color: var(--text-color-darkmode);
+    cursor: pointer;
+}
+
+main section:nth-child(1) p {
+    font-size: 1.7rem;
+    font-weight: 400;
+    width: 30%;
+    text-align: center;
+}
+
+
+
