--- a/style.css
+++ b/style.css
@@ -309,3 +309,135 @@ main section:nth-child(3) div:first-of-type button:hover {
     color: var(--text-color-darkmode);
     cursor: pointer;
 }
+
+
+/* main section 4 */
+
+main section:nth-child(4) .productHolder{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10%;
+    padding-bottom: 40px;
+}
+
+main section:nth-child(4) .productHolder .product {
+    position: relative;
+}
+
+main section:nth-child(4) .productHolder .product:hover {
+    cursor: pointer;
+    border: var(--accent-color) solid 2px;
+    border-radius: 20px;
+}
+
+main section:nth-child(4) .productHolder .product img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 200px;
+    background: linear-gradient(to bottom, transparent, black);
+    pointer-events: none;
+}
+
+main section:nth-child(4) .productHolder .product div:nth-child(1) {
+    position: absolute;
+    bottom: 0%;
+    left: 20%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    z-index: 3;
+    width: 200px;
+}
+
+main section:nth-child(4) .productHolder .product div:nth-child(1) h3 {
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+main section:nth-child(4) .productHolder .product div:nth-child(1) hr {
+    width: 50px;
+    height: 3px;
+    background-color: var(--accent-color);
+    border: none;
+}
+
+main section:nth-child(4) #sectionRetour {
+    padding-left: 5%;
+    padding-right: 5%;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+main section:nth-child(4) #sectionRetour h2 {
+    font-size: 2.2rem;
+    font-weight: 700;
+}
+
+main section:nth-child(4) #sectionRetour p {
+    font-size: 1.2rem;
+    font-weight: 400;
+}
+
+main section:nth-child(4) #rexs {
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 30px;
+}
+
+main section:nth-child(4) #rexs .rex {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    position: relative;
+}
+
+main section:nth-child(4) #rexs .rex .imgRex {
+    display: block;
+}
+
+main section:nth-child(4) #rexs .rex div:first-of-type {
+    background-color: #262626;
+    width: 60%;
+    padding: 10px;
+    border-radius: 20px;
+}
+
+main section:nth-child(4) #rexs .rex div:first-of-type div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+main section:nth-child(4) #controleSlider {
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 15%;
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    align-items: center;
+    gap: 20px;
+}
