--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
     --accent-color: #34CEEB;
+    --special-color: #EBA434;
     --text-color-darkmode: #FFFFFF;
     --background-color-darkmode: #060D0D;
     --text-color-lightmode: #060D0D;
@@ -435,9 +436,67 @@ main section:nth-child(4) #controleSlider {
     padding-left: 5%;
     padding-right: 5%;
     padding-top: 15%;
+    padding-bottom: 30px;
     display: flex;
     flex-direction: row;
     justify-content: end;
     align-items: center;
     gap: 20px;
+}
+
+
+/* main section 5 */
+main section:nth-child(5) {
+    height: calc(100vh - 90px);
+    width: 100%;
+    background-image: url(img/bg_section_five.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: var(--special-color);
+}
+
+main section:nth-child(5) p {
+    font-size: 2rem;
+    font-weight: 400;
+    width: 75%;
+    text-align: center;
+}
+
+main section:nth-child(5) p:nth-of-type(2) {
+    margin-top: 50px;
+}
+
+main section:nth-child(5) p img:first-of-type {
+    position: relative;
+    top: -25px;
+}
+
+main section:nth-child(5) p img:nth-of-type(2) {
+    position: relative;
+    bottom: -25px;
+}
+
+main section:nth-child(5) button {
+    background-color: transparent;
+    border: 1px solid var(--accent-color);
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: var(--text-color-darkmode);
+    font-size: 1.2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 15%;
+}
+
+main section:nth-child(5) button:hover {
+    background-color: var(--accent-color);
+    color: var(--text-color-darkmode);
+    cursor: pointer;
 }
