--- a/style.css
+++ b/style.css
@@ -325,6 +325,7 @@ main section:nth-child(4) .productHolder{
 
 main section:nth-child(4) .productHolder .product {
     position: relative;
+    border: 2px solid transparent;
 }
 
 main section:nth-child(4) .productHolder .product:hover {
@@ -442,7 +443,9 @@ main section:nth-child(4) #controleSlider {
     justify-content: end;
     align-items: center;
     gap: 20px;
+    cursor: pointer;
 }
+
 
 
 /* main section 5 */
@@ -499,4 +502,120 @@ main section:nth-child(5) button:hover {
     background-color: var(--accent-color);
     color: var(--text-color-darkmode);
     cursor: pointer;
+}
+
+
+/* footer */
+
+footer {
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+footer h2 {
+    font-size: 2rem;
+    font-weight: 700;
+    padding-bottom: 80px;
+    padding-top: 90px;
+    text-align: center;
+}
+
+footer .QA {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.3rem;
+}
+
+footer p {
+    display: none;
+    font-size: 1.1rem;
+    padding-top: 30px;
+}
+
+footer hr {
+    width: 100%;
+    height: 2px;
+    background-color: #B0B0B0;
+    border: none;
+    margin-top: 20px;
+    margin-bottom: 50px;
+}
+
+.open {
+    display: block;
+}
+
+footer button {
+    background-color: transparent;
+    border: 1px solid var(--text-color-darkmode);
+    padding: 15px 50px;
+    border-radius: 50px;
+    color: var(--text-color-darkmode);
+    font-size: 1.2rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 20px;
+    margin-top: 90px;
+    margin-bottom: 70px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+footer section p {
+    display: block;
+    color: var(--text-color-darkmode);
+    font-size: 1rem;
+    padding-top: 0;
+}
+
+footer section div:nth-child(1) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+footer section div ul li {
+    list-style: none;
+    padding-bottom: 10px; 
+}
+
+footer section div ul li:first-of-type {
+    font-size: 1.2rem;
+    font-weight: 700;
+}
+
+footer #intel {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-bottom: 50px;
+}
+
+footer #intel div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+}
+
+footer #endlogo {
+    padding-left: 90%;
+    /* padding-top: 50px;
+    padding-bottom: 50px; */
+}
+
+footer #mention {
+    font-size: 0.8rem;
+    font-weight: 400;
+    margin-bottom: 20px;
+}
+
+
+.logos {
+    height: 90px;
+    width: auto;
 }
