--- a/style.css
+++ b/style.css
@@ -106,9 +106,10 @@ main section:nth-child(1) {
 }
 
 main section:nth-child(1) div:nth-child(1) {
-    width: 30%;
+    width: fit-content;
     display: flex;
     flex-direction: row;
+    background-color: violet;
 }
 main section:nth-child(1) div:nth-child(1) h2 {
     font-size: 1.8rem;
@@ -319,7 +320,7 @@ main section:nth-child(4) .productHolder{
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 10%;
+    gap: 3%;
     padding-bottom: 40px;
 }
 
